<resources>
    <string name="app_name">My Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product_title">Tambah Produk</string>
    <string name="product_list_title">Daftar Produk</string>
    <string name="product_name_title">Nama Produk</string>
    <string name="product_name_hint">Masukan nama produk</string>
    <string name="sale_price_displayed">Apakah harga jual ditampilkan?</string>
    <string name="show_sale_price">Tampil di Penjualan</string>
    <string name="purchase_price_displayed">Apakah harga beli ditampilkan?</string>
    <string name="show_purchase_price">Tampil di Pembelian</string>
    <string name="selling_price_title">Harga Jual</string>
    <string name="selling_price_hint">Masukan harga jual</string>
    <string name="purchase_price_title">Harga Beli</string>
    <string name="purchase_price_hint">Masukan harga beli</string>
    <string name="save_title">Simpan</string>
    <string name="product_input_title">Input Produk</string>
    <string name="edit_title">Edit</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="delete_title">Delete</string>
    <string name="delete_product_title">Delete Product</string>
    <string name="empty_field_product_name">Nama product harus diisi</string>
    <string name="empty_field_selling_price">Harga jual harus diisi</string>
    <string name="empty_field_purchase_price">Harga beli harus diisi</string>
    <string name="data_saved_successfully_message">Data berhasil disimpan</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="delete_alert_title">Hapus Produk?</string>
    <string name="delete_alert_message">Apakah anda yakin ingin menghapus produk ini?</string>
    <string name="data_updated_successfully_message">Data berhasil di update</string>
    <string name="update_title">Update</string>
    <string name="empty_product_title">Produk masih kosong</string>
    <string name="empty_product">Empty Product</string>
</resources>