<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProductInputFragment">

    <include
        android:id="@+id/layout_toolbars"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/product_name_title"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbars" />

    <com.ryz.myapplication.common.CustomEditText
        android:id="@+id/edt_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/product_name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/secondary_color"
        android:textSize="14sp"
        app:MyApplication_setClearIconVisible="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

    <TextView
        android:id="@+id/tv_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/sale_price_displayed"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_product_name" />

    <CheckBox
        android:id="@+id/cb_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_sale_price"
        app:layout_constraintStart_toStartOf="@+id/edt_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_sell" />

    <TextView
        android:id="@+id/tv_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/purchase_price_displayed"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_sell" />

    <CheckBox
        android:id="@+id/cb_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_purchase_price"
        app:layout_constraintStart_toStartOf="@+id/edt_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_buy" />

    <TextView
        android:id="@+id/tv_selling_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/selling_price_title"
        android:textColor="@color/dark"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_buy" />

    <com.ryz.myapplication.common.CustomEditText
        android:id="@+id/edt_selling_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/selling_price_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/secondary_color"
        android:textSize="14sp"
        android:visibility="gone"
        app:MyApplication_setClearIconVisible="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_selling_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_selling_price" />

    <TextView
        android:id="@+id/tv_purchase_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/purchase_price_title"
        android:textColor="@color/dark"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_selling_price" />

    <com.ryz.myapplication.common.CustomEditText
        android:id="@+id/edt_purchase_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/purchase_price_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/secondary_color"
        android:textSize="14sp"
        android:visibility="gone"
        app:MyApplication_setClearIconVisible="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_purchase_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_purchase_price" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/save_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>